samples/_failures_safe/1761002589_516a49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3df5dfe2.c: In function ‘main’:
./samples/SAFE/__tmp_3df5dfe2.c:148:5: error: expected expression at end of input
  148 |     int entry_count =
      |     ^~~
./samples/SAFE/__tmp_3df5dfe2.c:148:5: error: expected declaration or statement at end of input
